--- a/0405/style.css
+++ b/0405/style.css
@@ -26,7 +26,7 @@ header h1 {
     font-weight: bolde;
 }
 
-section {
+main {
     display: flex;
     justify-content: center;
     align-items: center;
