--- a/캐릭터/style.css
+++ b/캐릭터/style.css
@@ -9,6 +9,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(190, 27, 190);
 }
 
 *,
@@ -17,10 +18,65 @@ body {
     box-sizing: border-box;
 }
 
+/*animation*/
+@keyframes 귀오른쪽 {
+    from {
+        transform: rotate(30deg);
+    }
+
+    to {
+        transform: rotate(40deg) translateX(10px);
+    }
+}
+
+@keyframes 귀왼쪽 {
+    from {
+        transform: rotate(-30deg);
+    }
+
+    to {
+        transform: rotate(-40deg) translateX(-10px);
+    }
+}
+
+@keyframes 손오른쪽 {
+    from {
+        transform: rotate(-30deg);
+    }
+
+    to {
+        transform: rotate(-36deg) translateY(-4px);
+    }
+}
+
+@keyframes ball {
+    0% {
+      top:0px;
+    }
+    95% {
+      width: 50px;
+    }
+    to {
+      top:300px;
+      width:200px;
+      height:400px
+    } 
+  }
+
 body {
     margin: 0;
     padding: 0;
 }
+
+.ball{
+    left: 100px;
+    top:0;
+    width:100px;
+    height:100px;
+    border-radius:50%;
+    background:transparent;
+    animation:ball 1.5s ease-in Infinite Alternate;
+  }
 
 .tiger {
     position: relative;
@@ -36,22 +92,23 @@ body {
     width: 63px;
     height: 74px;
     border: 5px solid var(--black);
-    border-radius: 40% 40% 40% 60%;
+    border-radius: 70% 80% 60% 70%;
     background-color: var(--face);
     z-index: 4;
 }
 
 .tiger .ear.left{
-    top: -15px;
+    top: -5px;
     left: 30px;
     transform: rotate(130deg);
-
+    animation: 귀왼쪽 0.3s infinite alternate;
 }
 
 .tiger .ear.right{
-    top: -15px;
+    top: -5px;
     right: 70px;
-    transform: rotate(-130deg);
+    transform: rotate(220deg);
+    animation: 귀오른쪽 0.3s infinite alternate;
 }
 
 .tiger .face {
@@ -225,17 +282,16 @@ body {
     height: 180px;
     background-color: var(--face);
     border: 5px solid var(--black);
-    border-radius: 40% 40% 20% 20%;
     z-index: 0;
 }
 
 .tiger .tigerbody .center_body {
     position: absolute;
-    width: 150px;
-    height: 110px;
-    top: 45px;
-    right: 30px;
-    border-radius: 50% 50% 20% 20%;
+    width: 130px;
+    height: 100px;
+    top: 50px;
+    right: 40px;
+    border-radius: 20% 20% 50% 50%;
     border: 5px solid var(--black);
     background-color: rgb(253, 227, 198);
 }
@@ -255,13 +311,105 @@ body {
 
 .tiger .arm.right {
     position: absolute;
-    top: 250px;
-    right: 33px;
+    top: 258px;
+    right: 20px;
     width: 100px;
     height: 60px;
     background-color: var(--face);
-    transform: rotate(-230deg);
     border: 5px solid var(--black);
-    border-radius: 50% 10% 10% 50%;
-    z-index: 5;
+    border-radius: 10% 50% 50% 10%;
+    z-index: 1;
+    transform: rotate(80deg);
+    animation: 손오른쪽 0.5s infinite alternate;
+}
+
+.tiger .arm.left::before {
+    content: " ";
+    position: absolute;
+    top: 41px;
+    left: 36px;
+    width: 70px;
+    height: 20px;
+    border-radius: 20%;
+    background-color: var(--face);
+}
+
+.tiger .arm.right::before {
+    content: " ";
+    position: absolute;
+    top: px;
+    right: 83px;
+    width: 13px;
+    height: 50px;
+    background-color: var(--face);
+}
+
+.tiger .leg.right {
+    position: absolute;
+    bottom: 120px;
+    left: 50px;
+    width: 70px;
+    height: 50px;
+    background-color: var(--face);
+    border: 5px solid var(--black);
+    border-radius: 10% 15% 40% 40%;
+    z-index: 1;
+}
+
+.tiger .leg.left {
+    position: absolute;
+    bottom: 120px;
+    right: 90px;
+    width: 70px;
+    height: 50px;
+    background-color: var(--face);
+    border: 5px solid var(--black);
+    border-radius: 10% 15% 40% 40%;
+    z-index: 1;
+}
+
+.tiger .leg.right::before {
+    content: " ";
+    position: absolute;
+    bottom: 30px;
+    width: 211px;
+    height: 20px;
+    background-color: var(--face);
+}
+
+.tiger .leg.left::before {
+    content: " ";
+    position: absolute;
+    bottom: 30px;
+    right: -1px;
+    width: 211px;
+    height: 20px;
+    background-color: var(--face);
+}
+
+.shadow {
+    position: absolute;
+    bottom: 100px;  
+    left: 40px;  
+    width: 280px;
+    height: 55px;
+    background-color: rgb(5, 5, 5);
+    border-radius: 90%;
+}
+
+.box {
+    width: 278px;
+    height: 500px;
+    margin: -80px auto;
+    border: 5px solid var(--black);
+    display: flex;
+    background-color: teal;
+    justify-content: center;
+}
+
+.backball {
+    top: 20px;
+    width: 500px;
+    height: 500px;
+    display: flex;
 }
